--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.4.3",
     "express": "^4.4.5",
     "pg-promise": "^4.0.0",
-    "vows": "^0.9.0-rc3"
+    "vows": "^0.9.0-rc3",
+    "qr-image": "^3.1.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -30,6 +31,6 @@
   },
   "homepage": "https://flappynerd.net",
   "engines" : {
-    "node" : "0.12.x"
+    "node" : "4.4.x"
   }
 }
