--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "body-parser": "^1.4.3",
     "express": "^4.4.5",
+    "express-session": "^1.13.0",
+    "ejs": "^2.4.2",
+    "compression": "^1.6.2",
     "pg-promise": "^4.0.0",
     "vows": "^0.9.0-rc3",
     "qr-image": "^3.1.0"
